Updated main and css files of view source

--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- meta tags, links to css, etc. -->
     <meta charset="utf-8">
-    <title>DIG 245 View Source</title>
+    <title>DIG 245 View Source - Blake Craig</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-
-    <!-- visible content goes here -->
-    <h1>DIG 245 View Source</h1>
-
+    <div class="Canoe Image">
+        <div> </div>
+        <div class="l1">At first we</div>
+        <div class="l2">were rowing and </div>
+        <div class="l3">flowing effort-</div>
+        <div class="l4">lessly with</div>
+        <!-- Body -->
+        <div>&nbsp;</div>
+        <div class="l5 torso">the hasty dance of the water</div>
+        <div class="l6 torso">through our</div>
+        <div class="l7a torso">creek before the hyacinths started</div>
+        <div class="l8b torso">like a drunk</div>
+        <div class="l9b torso">I heard great</div>
+        <!-- Boat -->
+        <div class="l7b boat">run-</div>
+        <div class="l8a boat">ning</div>
+        <div class="l8c boat">driver</div>
+        <div class="l9a boat">everywhere.</div>
+        <div class="l9c boat">and lovely captivating</div>
+        <div class="l10a boat">captivating tales of Adegbe lake from 
+            Grandma as
+        </div>
+        <div class="l10b boat">I decended on 3 big madiga</div>
+        <div class="l11a boat">and dried aloma fish. As a kid I saw 
+            smooth 
+        </div>
+        <div class="l11b boat">strokes and paddle's play as</div>
+        
+        <div class="l12a boat">fun as the water's rhythm kept my eyes
+        </div>
+        <div class="l12b boat">hooked as we guide and force </div>
+        <div class="l13a boat">our way through the water hyacinth</div>
+        <div class="l13b boat">colonized creek. Some foliage </div>
+        <div class="l14a boat">hugged the canoe edge and some </div>
+        <div class="l14b boat">married our paddle. I saw</div>
+        <!-- Waves -->
+        <div class="l15a water">nature's excellence and it's aesthetic 
+            esthesiogenic pledge. Sun's 
+        </div>
+        <div class="l15b water">warmth, gentle breeze and the 
+            lovely Grammy sweet songs of birds. I</I></div>
+        <div class="l16 water">enjoyed seeing the ripples our canoe created,
+            and the fact that it was my first time entering a canoe kept
+            me lively. Canoe cruise was a moment to seize.</div>
+        <!-- Title/Paddle -->
+        <div class="t1 title">A CANOE</div>
+        <div class="t2 title">CRUISE</div>
+        <div class="t3 author">Ouseibai Bright </div>
+        <div class="t4 author">Ebi</div>
+    </div>
 </body>
 </html>
